--- a/index.html
+++ b/index.html
@@ -5,94 +5,155 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+        integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio </a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="header">
+        <nav class="header-nav">
+            <a class="header-logo" href="./index.html"><span class="header-logo-blue">Web</span>Studio</a>
+            <ul class="header-menu">
+                <li class="header-menu-item">
+                    <a class="header-menu-link" href="">Studio </a>
+                </li>
+                <li class="header-menu-item">
+                    <a class="header-menu-link" href="">Portfolio</a>
+                </li>
+                <li class="header-menu-item">
+                    <a class="header-menu-link" href="">Contacts</a>
+                </li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <address class="address">
+            <ul class="address-list">
+                <li class="address-list-item">
+                    <a class="address-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                <li class="address-list-item">
+                    <a class="address-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
     </header>
     <main>
-        <!-- section 1 -->
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
-        </section>
-        <!-- section 2 -->
-        <section>
+        <!-- section-hero-image -->
+        <div class="hero-image">
+            <section class="section-hero-image">
+                <h1 class="section-title">Effective Solutions for Your Business</h1>
+                <button class="section-order-button" type="button">Order Service</button>
+            </section>
+        </div>
+        <!-- Our goals -->
+        <section class="our-goals">
             <!-- Feature 1 -->
-            <h2>Our goals</h2>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative
+            <h2 class="goals-title">Our goals</h2>
+            <ul class="goals-list">
+                <li class="goals-list-item">
+                    <h3 class="goals-list-title">Strategy</h3>
+                    <p class="goals-list-text">Our goal is to identify the business problem to walk away with the
+                        perfect and creative
                         solution.</p>
                 </li>
                 <!-- Feature 1 -->
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                <li class="goals-list-item">
+                    <h3 class="goals-list-title">Punctuality</h3>
+                    <p class="goals-list-text">Bring the key message to the brand's audience for the best price within
+                        the shortest possible
                         time.</p>
                 </li>
                 <!-- Feature 1 -->
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <li class="goals-list-item">
+                    <h3 class="goals-list-title">Diligence</h3>
+                    <p class="goals-list-text">Research and confirm brands that present the strongest digital growth
+                        opportunities and minimize
                         risk.</p>
                 </li>
                 <!-- Feature 1 -->
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                <li class="goals-list-item">
+                    <h3 class="goals-list-title">Technologies</h3>
+                    <p class="goals-list-text">Design practice focused on digital experiences. We bring forth a deep
+                        passion for
                         problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <!-- section  -->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/markguerrero.jpg" alt="Mark Guerrero" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+        <!-- Our Team -->
+        <section class="team">
+            <h2 class="title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-list-item">
+                    <img class="team-people" src="./images/markguerrero.jpg" alt="Mark Guerrero" width="264"
+                        height="260">
+                    <h3 class="team-people-name">Mark Guerrero</h3>
+                    <p class="team-people-position">Product Designer</p>
+                </li>
+                <li class="team-list-item">
+                    <img class="team-people" src="./images/tomford.jpg" alt="Tom Ford" width="264" height="260">
+                    <h3 class="team-people-name">Tom Ford</h3>
+                    <p class="team-people-position">Frontend Developer</p>
+                </li>
+                <li class="team-list-item">
+                    <img class="team-people" src="./images/camilagarcia.jpg" alt="Camila Garcia" width="264"
+                        height="260">
+                    <h3 class="team-people-name">Camila Garcia</h3>
+                    <p class="team-people-position">Marketing</p>
+                </li>
+                <li class="team-list-item">
+                    <img class="team-people" src="./images/danielwilson.jpg" alt="Daniel Wilson" width="264"
+                        height="260">
+                    <h3 class="team-people-name">Daniel Wilson</h3>
+                    <p class="team-people-position">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+        <!-- Our Portfolio -->
+        <section class="portfolio">
+            <h2 class="title">Our Portfolio</h2>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
+                    <img class="portfolio-photo" src="/images/bankingapp.jpg" alt="bankingapp">
+                    <h3 class="photo-title">Banking App</h3>
+                    <p class="photo-text">App</p>
+                </li>
+                <li class="portfolio-item">
+                    <img class="portfolio-photo" src="/images/cashlesspayment.jpg" alt="cashlesspayment">
+                    <h3 class="photo-title">Cashless Payment</h3>
+                    <p class="photo-text">Marketing</p>
+                </li>
+                <li class="portfolio-item">
+                    <img class="portfolio-photo" src="/images/meditationapp.jpg" alt="meditationapp">
+                    <h3 class="photo-title">Meditaion App</h3>
+                    <p class="photo-text">App</p>
+                </li>
+                <li class="portfolio-item">
+                    <img class="portfolio-photo" src="/images/taxiservice.jpg" alt="taxiservice">
+                    <h3 class="photo-title">Taxi Service</h3>
+                    <p class="photo-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/tomford.jpg" alt="Tom Ford" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <img class="portfolio-photo" src="/images/screenillustrarions.jpg" alt="screenillustrarions">
+                    <h3 class="photo-title">Screen Illustrations</h3>
+                    <p class="photo-text">Design</p>
                 </li>
                 <li>
-                    <img src="./images/camilagarcia.jpg" alt="Camila Garcia" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/danielwilson.jpg" alt="Daniel Wilson" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <img class="portfolio-photo" src="/images/onlinecourses.jpg" alt="onlinecourses">
+                    <h3 class="photo-title">Online Courses</h3>
+                    <p class="photo-text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="footer-link" href="./index.html"><span class="header-logo-blue">Web</span>Studio</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </footer>
 </body>
 
