--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="footer-link" href="./index.html"><span class="header-logo-blue">Web</span>Studio</a>
+        <a class="footer-link" href="./index.html"><span class="header-logo-blue">Web</span><span
+                class="header-logo-white">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </footer>
