--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a class="header-logo" href="./index.html"><span class="header-logo-blue">Web</span>Studio</a>
+            <a class="header-logo" href="./index.html"><span class="header-logo-blue">Web</span><span
+                    class="header-logo">Studio</span></a>
             <ul class="header-menu">
                 <li class="header-menu-item">
-                    <a class="header-menu-link" href="">Studio </a>
+                    <a class="header-menu-link" href="./index.html">Studio </a>
                 </li>
                 <li class="header-menu-item">
                     <a class="header-menu-link" href="">Portfolio</a>
