--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <nav class="header-nav">
-            <a class="header-logo" href="./index.html"><span class="header-logo-blue">Web</span><span
-                    class="header-logo">Studio</span></a>
+            <a class="header-logo-blue" href="./index.html">Web<span class="header-logo">Studio</span></a>
             <ul class="header-menu">
                 <li class="header-menu-item">
                     <a class="header-menu-link" href="./index.html">Studio </a>
@@ -45,12 +44,10 @@
     </header>
     <main>
         <!-- section-hero-image -->
-        <div class="hero-image">
-            <section class="section-hero-image">
-                <h1 class="section-title">Effective Solutions for Your Business</h1>
-                <button class="section-order-button" type="button">Order Service</button>
-            </section>
-        </div>
+        <section class="section-hero-image">
+            <h1 class="section-title">Effective Solutions for Your Business</h1>
+            <button class="section-order-button" type="button">Order Service</button>
+        </section>
         <!-- Our goals -->
         <section class="our-goals">
             <!-- Feature 1 -->
@@ -152,8 +149,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="footer-link" href="./index.html"><span class="header-logo-blue">Web</span><span
-                class="header-logo-white">Studio</span></a>
+        <a class="footer-link" href="./index.html">Web<span class="header-logo-white">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
     </footer>
