--- a/index.html
+++ b/index.html
@@ -116,32 +116,33 @@
             <h2 class="title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item">
-                    <img class="portfolio-photo" src="/images/bankingapp.jpg" alt="bankingapp">
+                    <img class="portfolio-photo" src="./images/bankingapp.jpg" alt="bankingapp" width="360">
                     <h3 class="photo-title">Banking App</h3>
                     <p class="photo-text">App</p>
                 </li>
                 <li class="portfolio-item">
-                    <img class="portfolio-photo" src="/images/cashlesspayment.jpg" alt="cashlesspayment">
+                    <img class="portfolio-photo" src="./images/cashlesspayment.jpg" alt="cashlesspayment" width="360">
                     <h3 class="photo-title">Cashless Payment</h3>
                     <p class="photo-text">Marketing</p>
                 </li>
                 <li class="portfolio-item">
-                    <img class="portfolio-photo" src="/images/meditationapp.jpg" alt="meditationapp">
-                    <h3 class="photo-title">Meditaion App</h3>
+                    <img class="portfolio-photo" src="./images/meditationapp.jpg" alt="meditationapp" width="360">
+                    <h3 class="photo-title">Meditation App</h3>
                     <p class="photo-text">App</p>
                 </li>
                 <li class="portfolio-item">
-                    <img class="portfolio-photo" src="/images/taxiservice.jpg" alt="taxiservice">
+                    <img class="portfolio-photo" src="./images/taxiservice.jpg" alt="taxiservice" width="360">
                     <h3 class="photo-title">Taxi Service</h3>
                     <p class="photo-text">Marketing</p>
                 </li>
                 <li>
-                    <img class="portfolio-photo" src="/images/screenillustrarions.jpg" alt="screenillustrarions">
+                    <img class="portfolio-photo" src="./images/screenillustrarions.jpg" alt="screenillustrarions"
+                        width="360">
                     <h3 class="photo-title">Screen Illustrations</h3>
                     <p class="photo-text">Design</p>
                 </li>
                 <li>
-                    <img class="portfolio-photo" src="/images/onlinecourses.jpg" alt="onlinecourses">
+                    <img class="portfolio-photo" src="/images/onlinecourses.jpg" alt="onlinecourses" width="360">
                     <h3 class="photo-title">Online Courses</h3>
                     <p class="photo-text">Marketing</p>
                 </li>
