--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <p class="photo-text">Design</p>
                 </li>
                 <li>
-                    <img class="portfolio-photo" src="/images/onlinecourses.jpg" alt="onlinecourses" width="360">
+                    <img class="portfolio-photo" src="./images/onlinecourses.jpg" alt="onlinecourses" width="360">
                     <h3 class="photo-title">Online Courses</h3>
                     <p class="photo-text">Marketing</p>
                 </li>
